# WorkHunter

./: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: clean-dev.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  defaults.rs  lib.rs  main.rs
src-tauri/src/commands/: applications.rs  attachments.rs  auth.rs  decisions.rs  fonts.rs  gmail.rs  html_pdf.rs  jobsearch.rs  mod.rs  pdf.rs  profiles.rs  retention.rs  roles.rs  settings.rs
src-tauri/src/db/: migrations.rs  mod.rs
src/components/: AdPanel.tsx  BinaryDocumentPreview.tsx  FilterPanel.tsx  JobCard.tsx  MarkdownEditor.css  MarkdownEditor.tsx  ModelSelect.tsx  ProceedModal.tsx  RichDocumentEditor.tsx  RoleDocumentEditor.tsx  RoleDocumentVersionsPanel.tsx  TaxonomyMultiSelect.tsx
src/components/layout/: ProfileMenu.tsx  SettingsPanel.tsx  TopBar.tsx
src/context/: SessionContext.tsx
src/hooks/: useTaxonomyOptions.ts
src/lib/: ai-models.ts  ai.ts  api.ts  applicationMethod.ts  applications.ts  contentSlots.ts  documentFonts.ts  documentTemplates.ts  documentUtils.ts  ensureEditableHtml.ts  files.ts  i18n.ts  importDocument.ts  layout.ts  openExportFolder.ts  pageBreaks.ts  roles.ts  theme.ts
src/lib/editor/: contentSlotExtension.ts
src/pages/: ApplyPage.tsx  ArchivePage.tsx  EmailPage.tsx  ReviewPage.tsx  RolesPage.tsx  SearchPage.tsx  SetupWizard.tsx
src/prompts/: default-email-note.md  default-tailor.md
src/types/: index.ts
