[package]
name = "workhunter"
version = "0.1.0"
description = "WorkHunter - Platsbanken Job Application Assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "workhunter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
tokio = { version = "1", features = ["sync"] }
tiny_http = "0.12"
url = "2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
dotenvy = "0.15"
pulldown-cmark = "0.12"
genpdf = "0.2.0"
once_cell = "1"
sha2 = "0.10"
hex = "0.4"
